18_reverse_str/grade.txt
Grading at Fri Feb 15 17:56:29 UTC 2019
Attempting to compile  reverse.c
reverse.c: In function ‘reverse’:
reverse.c:12:12: error: ‘return’ with a value, in function returning void [-Werror]
     return "";
            ^
reverse.c:21:13: error: ‘return’ with a value, in function returning void [-Werror]
      return str;
             ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
